# rust_span

./: Cargo.toml  README.md  application.yml
src/: lib.rs  main.rs
src/config/: config.rs  mod.rs
src/data/: base_info.rs  mod.rs
src/database/: connect.rs
src/service/: mod.rs
src/web/: mod.rs  web_api.rs
