[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 通配符*表示可以使用任何版本，通常会拉取最新版本
[dependencies]
# web框架
rocket = "0.4.10"
# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 数据库 https://docs.rs/mysql/latest/mysql/
mysql = "22.1.0"
