[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 通配符*表示可以使用任何版本，通常会拉取最新版本
[dependencies]
futures = "0.3.4"
# web框架
rocket = "0.4.10"
# 数据库 https://docs.rs/mysql/latest/mysql/
mysql = "22.1.0"
# rbson (required)
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
rbson = "2.0"
# logging lib(required)
log = "0.4"
fast_log="1.3"
# rbatis (required) default is ```all-database```  +  ```runtime-tokio-rustls```
rbatis =  { version = "3.1" }
tokio = { version = "1", features = ["full"] }
# 或者，如果你使用 其他运行时，或者除mysql外排除其他数据库类型，改用这个
# rbatis = { version = "3.1", default-features = false, features = ["mysql","runtime-tokio-rustls"] }